--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Farfad3ts/Pinut.git"
+    "url": "git+https://github.com/Farfad3ts/Vortexia.git"
   },
   "author": "Farfad3ts",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.13.0",
+    "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1"
   }
